--- a/The Ear Trainer/nbproject/project.properties
+++ b/The Ear Trainer/nbproject/project.properties
@@ -29,7 +29,10 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.JFreeTree.classpath}:\
+    ${libs.MyLibrary.classpath}:\
+    ${libs.ju.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
